--- a/index.html
+++ b/index.html
@@ -534,20 +534,22 @@
 										<div class="homepage-headshots"
 											 style="display: flex; flex-wrap:wrap; justify-content:space-evenly">
 											<div style="flex-basis:100%; "
-												 class="homepage-headshot"><img style="border-radius: 50%" loading="lazy"
+												 class="homepage-headshot"><img style="border-radius: 50%;
+												 height: 150px;	width: auto"
+													 loading="lazy"
 													 class="alignnone wp-image-298 size-thumbnail"
 													 src="./gsa-4-pres.jpg"
-													 alt="George Sarah Olken"
-													 width="100"
-													 height="100">
+													 alt="George Sarah Olken">
 												<p><strong>George Sarah Olken</strong></p>
 												<div class="position">Local President</div>
 											</div>
-											<div style="display: none;" class="homepage-headshot">
+											<div style="display: none;"
+												 class="homepage-headshot">
 												<p><strong>Rakisha Kearns-White</strong></p>
 												<div class="position">Librarian VP</div>
 											</div>
-											<div style="display: none;" class="homepage-headshot">
+											<div style="display: none;"
+												 class="homepage-headshot">
 												<p><strong>Darlene Crowder</strong></p>
 												<div class="position">Custodial Rep</div>
 											</div>
@@ -579,7 +581,7 @@
 
 									<h5 style="margin-bottom: 0.5em;">We are committed to...</h5>
 									<section>
-										<h4 onclick="opener(this)"
+										<h4 onclick="opener(this, 0)"
 											data-isopen=false
 											style="margin-bottom: 0.5em;">
 											<span class="opener">+</span> Open Channels of Communication
@@ -589,20 +591,32 @@
 											<li>Timely responses to member questions</li>
 											<li>Improved transparency around local finances</li>
 										</ul>
+										<h4 onclick="opener(this, 1)"
+											data-isopen=false
+											style="margin-bottom: 0.5em;">
+											<span class="opener">+</span> More Ways to Get Involved
+										</h4>
+										<ul class="talking-point">
+											<li>More inclusive negotiation process</li>
+											<li>Train new shop stewards</li>
+											<li>Member education</li>
+											<li>Open forums</li>
+										</ul>
+										<h4 onclick="opener(this, 2)"
+											data-isopen=false
+											style="margin-bottom: 0.5em;">
+											<span class="opener">+</span> Better Working Conditions
+										</h4>
+										<ul class="talking-point">
+											<li>Fair work-from-home policy</li>
+											<li>Ability to share sick leave among coworkers</li>
+											<li>Bring part-timers and other rank-and-file coworkers into the union</li>
+											<li>Additional AL rollover</li>
+										</ul>
 									</section>
-									<script>
-										function opener(elem){
-											const isOpen = elem.dataset.isopen === 'true'
-											elem.dataset.isopen = !isOpen
-											elem.parentNode.getElementsByTagName("ul").item(0).classList.toggle("talking-point")
-											elem.parentNode.getElementsByClassName("opener").item(0).textContent = isOpen ? "+" : "-"
 
-										}
-									</script>
+									<h5 href="/" style="margin-bottom: 0.5em; color: rgb(42,93,125); cursor: pointer;">Tell us what you think!</h5>
 									</p>
-									<p>We have power. Now let’s use it.</p>
-
-
 
 									<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfjNAZhEmATUlqXyDVkKU8EwJEcdy79fU-0XcyrZOvL6pq_nw/viewform?embedded=true"
 											width="640"
@@ -635,7 +649,15 @@
 
 
 
+		<script>
+			function opener(elem, index){
+				const isOpen = elem.dataset.isopen === 'true'
+				elem.dataset.isopen = !isOpen
+				elem.parentNode.getElementsByTagName("ul").item(index).classList.toggle("talking-point")
+				elem.parentNode.getElementsByClassName("opener").item(index).textContent = isOpen ? "+" : "-"
 
+			}
+		</script>
 
 	</body>
 
